# advent_of_code_2021

./: Cargo.toml  Readme.md  journal.md  shell.nix
src/: bidirange.rs  field2d.rs  lib.rs  vec2d.rs
