[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
itertools = "0.10.1"
tempfile = "3.2.0"
indoc = "1.0"
regex = "1.5.4"
lazy_static = "1.4.0"